deployment/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: idp-ingress
  namespace: idp
spec:
  ingressClassName: nginx
  rules:
    - host: cloudstones.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: idp-ui-svc
                port:
                  number: 80
          - path: /epc
            pathType: Prefix
            backend:
              service:
                name: epc-ui-svc
                port:
                  number: 80
